--- a/WPNest/WPNest/MainPage.xaml
+++ b/WPNest/WPNest/MainPage.xaml
@@ -6,7 +6,7 @@
 							xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 							xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 							xmlns:WPNest="clr-namespace:WPNest" xmlns:Login="clr-namespace:WPNest.Login" 
-							xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" xmlns:ec="clr-namespace:Microsoft.Expression.Interactivity.Core;assembly=Microsoft.Expression.Interactions" xmlns:System="clr-namespace:System;assembly=mscorlib" xmlns:edc="clr-namespace:Microsoft.Expression.Controls;assembly=Microsoft.Expression.Drawing" x:Class="WPNest.MainPage" 
+							xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" xmlns:ec="clr-namespace:Microsoft.Expression.Interactivity.Core;assembly=Microsoft.Expression.Interactions" xmlns:System="clr-namespace:System;assembly=mscorlib" xmlns:edc="clr-namespace:Microsoft.Expression.Controls;assembly=Microsoft.Expression.Drawing" xmlns:toolkitPrimitives="clr-namespace:Microsoft.Phone.Controls.Primitives;assembly=Microsoft.Phone.Controls.Toolkit" x:Class="WPNest.MainPage" 
 							mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768" 
 							SupportedOrientations="Portrait" Orientation="Portrait" 
 							shell:SystemTray.BackgroundColor="Transparent"
@@ -119,6 +119,222 @@
 								</Path.RenderTransform>
 							</Path>
 						</Grid>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
+		<ControlTemplate x:Key="ListPickerControlDarkTemplate" TargetType="toolkit:ListPicker">
+			<StackPanel>
+				<VisualStateManager.VisualStateGroups>
+					<VisualStateGroup x:Name="PickerStates">
+						<VisualState x:Name="Normal"/>
+						<VisualState x:Name="Highlighted">
+							<Storyboard>
+								<ObjectAnimationUsingKeyFrames
+									Storyboard.TargetName="Border"
+									Storyboard.TargetProperty="Background"
+									Duration="0">
+									<DiscreteObjectKeyFrame
+										KeyTime="0">
+										<DiscreteObjectKeyFrame.Value>
+											<SolidColorBrush Color="White"/>
+										</DiscreteObjectKeyFrame.Value>
+									</DiscreteObjectKeyFrame>
+								</ObjectAnimationUsingKeyFrames>
+								<ObjectAnimationUsingKeyFrames
+									Storyboard.TargetName="Border"
+									Storyboard.TargetProperty="BorderBrush"
+									Duration="0">
+									<DiscreteObjectKeyFrame
+										KeyTime="0">
+										<DiscreteObjectKeyFrame.Value>
+											<SolidColorBrush Color="White"/>
+										</DiscreteObjectKeyFrame.Value>
+									</DiscreteObjectKeyFrame>
+								</ObjectAnimationUsingKeyFrames>
+							</Storyboard>
+						</VisualState>
+						<VisualState x:Name="Disabled">
+							<Storyboard>
+								<ObjectAnimationUsingKeyFrames
+									Storyboard.TargetName="Border"
+									Storyboard.TargetProperty="Background"
+									Duration="0">
+									<DiscreteObjectKeyFrame
+										Value="{StaticResource TransparentBrush}"
+										KeyTime="0"/>
+								</ObjectAnimationUsingKeyFrames>
+								<ObjectAnimationUsingKeyFrames
+									Storyboard.TargetName="Border"
+									Storyboard.TargetProperty="BorderBrush"
+									Duration="0">
+									<DiscreteObjectKeyFrame
+										Value="{StaticResource PhoneDisabledBrush}"
+										KeyTime="0"/>
+								</ObjectAnimationUsingKeyFrames>
+								<ObjectAnimationUsingKeyFrames
+									Storyboard.TargetName="UserControl"
+									Storyboard.TargetProperty="Foreground"
+									Duration="0">
+									<DiscreteObjectKeyFrame
+										Value="{StaticResource PhoneDisabledBrush}"
+										KeyTime="0"/>
+								</ObjectAnimationUsingKeyFrames>
+							</Storyboard>
+						</VisualState>
+					</VisualStateGroup>
+				</VisualStateManager.VisualStateGroups>
+				<ContentControl
+					Content="{TemplateBinding Header}"
+					ContentTemplate="{TemplateBinding HeaderTemplate}"
+					Foreground="{StaticResource PhoneSubtleBrush}"
+					FontSize="{StaticResource PhoneFontSizeNormal}"
+					HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+					Margin="0 0 0 8"/>
+				<Grid>
+					<Border x:Name="Border"
+						Background="{TemplateBinding Background}"
+						BorderBrush="{TemplateBinding BorderBrush}"
+						BorderThickness="{TemplateBinding BorderThickness}">
+						<UserControl x:Name="UserControl" Foreground="{TemplateBinding Foreground}">
+							<StackPanel>
+								<TextBlock x:Name="MultipleSelectionModeSummary" Margin="8 8 0 8" />
+								<Canvas x:Name="ItemsPresenterHost" MinHeight="46">
+									<ItemsPresenter x:Name="ItemsPresenter">
+										<ItemsPresenter.RenderTransform>
+											<TranslateTransform x:Name="ItemsPresenterTranslateTransform"/>
+										</ItemsPresenter.RenderTransform>
+									</ItemsPresenter>
+								</Canvas>
+							</StackPanel>
+						</UserControl>
+					</Border>
+				</Grid>
+			</StackPanel>
+		</ControlTemplate>
+		<Style x:Key="ToggleSwitchButtonDarkStyle" TargetType="toolkitPrimitives:ToggleSwitchButton">
+			<Setter Property="Background" Value="{StaticResource PhoneBackgroundBrush}"/>
+			<Setter Property="IsTabStop" Value="False"/>
+			<Setter Property="SwitchForeground" Value="{StaticResource PhoneAccentBrush}"/>
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="toolkitPrimitives:ToggleSwitchButton">
+						<Border x:Name="Root" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CacheMode="BitmapCache" Opacity="{TemplateBinding Opacity}" Padding="{TemplateBinding Padding}">
+							<VisualStateManager.VisualStateGroups>
+								<VisualStateGroup x:Name="CommonStates">
+									<VisualState x:Name="Normal"/>
+									<VisualState x:Name="Disabled">
+										<Storyboard>
+											<ColorAnimation Duration="0" To="{StaticResource PhoneForegroundColor}" Storyboard.TargetProperty="(Grid.Background).(SolidColorBrush.Color)" Storyboard.TargetName="SwitchBottom"/>
+											<DoubleAnimation Duration="0" To="0.3" Storyboard.TargetProperty="Opacity" Storyboard.TargetName="Root"/>
+										</Storyboard>
+									</VisualState>
+								</VisualStateGroup>
+								<VisualStateGroup x:Name="CheckStates">
+									<VisualStateGroup.Transitions>
+										<VisualTransition GeneratedDuration="0:0:0.05" To="Unchecked"/>
+										<VisualTransition GeneratedDuration="0:0:0.05" To="Checked"/>
+									</VisualStateGroup.Transitions>
+									<VisualState x:Name="Checked">
+										<Storyboard>
+											<DoubleAnimation Duration="0" To="69" Storyboard.TargetProperty="(TranslateTransform.X)" Storyboard.TargetName="BackgroundTranslation">
+												<DoubleAnimation.EasingFunction>
+													<ExponentialEase EasingMode="EaseOut" Exponent="15"/>
+												</DoubleAnimation.EasingFunction>
+											</DoubleAnimation>
+											<DoubleAnimation Duration="0" To="69" Storyboard.TargetProperty="(TranslateTransform.X)" Storyboard.TargetName="ThumbTranslation">
+												<DoubleAnimation.EasingFunction>
+													<ExponentialEase EasingMode="EaseOut" Exponent="15"/>
+												</DoubleAnimation.EasingFunction>
+											</DoubleAnimation>
+										</Storyboard>
+									</VisualState>
+									<VisualState x:Name="Dragging"/>
+									<VisualState x:Name="Unchecked">
+										<Storyboard>
+											<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(TranslateTransform.X)" Storyboard.TargetName="BackgroundTranslation"/>
+											<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(TranslateTransform.X)" Storyboard.TargetName="ThumbTranslation"/>
+										</Storyboard>
+									</VisualState>
+								</VisualStateGroup>
+								<VisualStateGroup x:Name="FocusStates"/>
+							</VisualStateManager.VisualStateGroups>
+							<Grid x:Name="SwitchRoot" Background="Transparent" Height="95" Width="136">
+								<Grid x:Name="SwitchTrack" Width="89">
+									<Grid x:Name="SwitchBottom" Background="{TemplateBinding SwitchForeground}" Height="34">
+										<Rectangle x:Name="SwitchBackground" Fill="{TemplateBinding Background}" HorizontalAlignment="Center" Height="20" VerticalAlignment="Center" Width="77">
+											<Rectangle.RenderTransform>
+												<TranslateTransform x:Name="BackgroundTranslation"/>
+											</Rectangle.RenderTransform>
+										</Rectangle>
+										<Border BorderThickness="3">
+											<Border.BorderBrush>
+												<SolidColorBrush Color="#FFFFFFFF"/>
+											</Border.BorderBrush>
+											<Border BorderThickness="4" BorderBrush="Black"/>
+										</Border>
+									</Grid>
+									<Border x:Name="SwitchThumb" BorderThickness="4,0" HorizontalAlignment="Left" Height="38" Margin="-4,0" Width="28">
+										<Border.BorderBrush>
+											<SolidColorBrush Color="Black"/>
+										</Border.BorderBrush>
+										<Border.RenderTransform>
+											<TranslateTransform x:Name="ThumbTranslation"/>
+										</Border.RenderTransform>
+										<Border x:Name="ThumbCenter" BorderThickness="2">
+											<Border.Background>
+												<SolidColorBrush Color="#FFFFFFFF"/>
+											</Border.Background>
+											<Border.BorderBrush>
+												<SolidColorBrush Color="White"/>
+											</Border.BorderBrush>
+										</Border>
+									</Border>
+								</Grid>
+							</Grid>
+						</Border>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
+		<Style x:Key="ToggleSwitchDarkStyle" TargetType="toolkit:ToggleSwitch">
+			<Setter Property="Background" Value="{StaticResource PhoneBackgroundBrush}"/>
+			<Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilyLight}"/>
+			<Setter Property="FontSize" Value="{StaticResource PhoneFontSizeLarge}"/>
+			<Setter Property="Foreground" Value="{StaticResource PhoneForegroundBrush}"/>
+			<Setter Property="IsTabStop" Value="False"/>
+			<Setter Property="HorizontalContentAlignment" Value="Left"/>
+			<Setter Property="SwitchForeground" Value="{StaticResource PhoneAccentBrush}"/>
+			<Setter Property="VerticalContentAlignment" Value="Top"/>
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="toolkit:ToggleSwitch">
+						<Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CacheMode="BitmapCache" Padding="{TemplateBinding Padding}">
+							<VisualStateManager.VisualStateGroups>
+								<VisualStateGroup x:Name="CommonStates">
+									<VisualState x:Name="Normal"/>
+									<VisualState x:Name="Disabled">
+										<Storyboard>
+											<DoubleAnimation Duration="0" To="0.3" Storyboard.TargetProperty="Opacity" Storyboard.TargetName="Header"/>
+											<DoubleAnimation Duration="0" To="0.3" Storyboard.TargetProperty="Opacity" Storyboard.TargetName="Content"/>
+										</Storyboard>
+									</VisualState>
+								</VisualStateGroup>
+							</VisualStateManager.VisualStateGroups>
+							<Grid Margin="12,5,36,42">
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="*"/>
+									<ColumnDefinition Width="Auto"/>
+								</Grid.ColumnDefinitions>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+								</Grid.RowDefinitions>
+								<ContentControl x:Name="Header" ContentTemplate="{TemplateBinding HeaderTemplate}" Content="{TemplateBinding Header}" Foreground="{StaticResource PhoneSubtleBrush}" FontSize="{StaticResource PhoneFontSizeNormal}" FontFamily="{StaticResource PhoneFontFamilyNormal}" HorizontalAlignment="Left" IsTabStop="False" Margin="-1,0,0,0" Opacity="{TemplateBinding Opacity}" VerticalAlignment="Bottom"/>
+								<ContentControl x:Name="Content" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" IsTabStop="False" Margin="-1,1,0,-7" Opacity="{TemplateBinding Opacity}" Grid.Row="1" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+								<toolkitPrimitives:ToggleSwitchButton x:Name="Switch" Background="{TemplateBinding Background}" Grid.Column="1" Margin="-22,-29,-24,-28" Opacity="{TemplateBinding Opacity}" Grid.RowSpan="2" SwitchForeground="{TemplateBinding SwitchForeground}" VerticalAlignment="Bottom" Style="{StaticResource ToggleSwitchButtonDarkStyle}"/>
+							</Grid>
+						</Border>
 					</ControlTemplate>
 				</Setter.Value>
 			</Setter>
@@ -249,7 +465,7 @@
 				</VisualStateGroup.Transitions>
 				<VisualState x:Name="SettingsOpen">
 					<Storyboard>
-						<DoubleAnimation Duration="0" To="32" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="settingsGrid" d:IsOptimized="True"/>
+						<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="settingsGrid" d:IsOptimized="True"/>
 						<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="settingsButton" d:IsOptimized="True"/>
 						<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.IsHitTestVisible)" Storyboard.TargetName="settingsButton">
 							<DiscreteObjectKeyFrame KeyTime="0">
@@ -283,7 +499,7 @@
 				</VisualState>
 				<VisualState x:Name="SettingsClosed">
 					<Storyboard>
-						<DoubleAnimation Duration="0" To="600" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="settingsGrid" d:IsOptimized="True"/>
+						<DoubleAnimation Duration="0" To="336" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="settingsGrid" d:IsOptimized="True"/>
 						<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True"/>
 						<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True"/>
 						<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True"/>
@@ -293,7 +509,7 @@
 		</VisualStateManager.VisualStateGroups>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="32"/>
-			<RowDefinition Height="Auto" />
+			<RowDefinition />
 		</Grid.RowDefinitions>
 
 		<VisualStateManager.CustomVisualStateManager>
@@ -323,27 +539,44 @@
 			</Button.RenderTransform>
 		</Button>
 		<Rectangle x:Name="settingsInputBlocker" Grid.RowSpan="2" Fill="#01FFFFFF" StrokeThickness="0" IsHitTestVisible="False" MouseLeftButtonDown="settingsInputBlocker_MouseLeftButtonDown" Opacity="0"/>
-		<Grid x:Name="settingsGrid" Height="400" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5" Grid.Row="1">
+		<Grid x:Name="settingsGrid" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5" Grid.Row="1" Background="#FF1F1F1F">
 			<Grid.RenderTransform>
-				<CompositeTransform TranslateY="400"/>
+				<CompositeTransform TranslateY="336"/>
 			</Grid.RenderTransform>
 			<Grid.RowDefinitions>
-				<RowDefinition/>
+				<RowDefinition Height="20"/>
 				<RowDefinition Height="Auto"/>
 				<RowDefinition Height="Auto"/>
 				<RowDefinition Height="Auto"/>
 			</Grid.RowDefinitions>
-			<Grid.Background>
-				<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-					<GradientStop Color="#013E3E3E"/>
-					<GradientStop Color="#FF191919" Offset="1"/>
-					<GradientStop Color="#F63A3A3A" Offset="0.233"/>
-					<GradientStop Color="#4B3C3C3C" Offset="0.086"/>
-				</LinearGradientBrush>
-			</Grid.Background>
-			<toolkit:ToggleSwitch x:Name="awaySwitch" VerticalAlignment="Top" Grid.Row="1" Margin="20,0,0,0"/>
-			<toolkit:ToggleSwitch x:Name="fanSwitch" VerticalAlignment="Top" Grid.Row="2" Margin="20,0,0,0"/>
-			<toolkit:ListPicker Margin="30,0,30,30" VerticalAlignment="Top" Grid.Row="3"/>
+			<TextBlock x:Name="awayLabel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Away Mode" VerticalAlignment="Top" Grid.Row="1" Margin="32,0,0,0" FontSize="21.333" FontFamily="Segoe WP Light" Foreground="#FDC1C1C1"/>
+			<toolkit:ToggleSwitch x:Name="awaySwitch" VerticalAlignment="Top" Grid.Row="1" Margin="20,10,0,0" Content="Home" SwitchForeground="{StaticResource PhoneAccentBrush}" Foreground="White" Background="Black" Style="{StaticResource ToggleSwitchDarkStyle}"/>
+			<TextBlock x:Name="fanLabel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Fan" VerticalAlignment="Top" Grid.Row="2" Margin="32,0,0,0" FontSize="21.333" FontFamily="Segoe WP Light" Foreground="#FDC1C1C1"/>
+			<toolkit:ToggleSwitch x:Name="fanSwitch" VerticalAlignment="Top" Grid.Row="2" Margin="20,10,0,0" Content="Auto" IsChecked="True" SwitchForeground="{StaticResource PhoneAccentBrush}" Foreground="White" Background="Black" Style="{StaticResource ToggleSwitchDarkStyle}"/>
+			<TextBlock x:Name="hvacLabel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Fan" VerticalAlignment="Top" Grid.Row="2" Margin="32,0,0,0" FontSize="21.333" FontFamily="Segoe WP Light" Foreground="#FDCBCBCB"/>
+			<toolkit:ListPicker Margin="30,0,30,30" VerticalAlignment="Bottom" Grid.Row="3" Background="#BFFFFFFF" BorderBrush="#BFFFFFFF" Foreground="Black" Template="{StaticResource ListPickerControlDarkTemplate}">
+				<toolkit:ListPickerItem HorizontalAlignment="Left" Width="414">
+					<StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+						<Ellipse Fill="#FFB44040" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
+						<Ellipse Fill="#FFA6A6A6" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
+						<TextBlock TextWrapping="Wrap" Text="HEAT ONLY" Margin="10,0,0,0"/>
+					</StackPanel>
+				</toolkit:ListPickerItem>
+				<toolkit:ListPickerItem HorizontalAlignment="Left" Width="414">
+					<StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+						<Ellipse Fill="#FFA6A6A6" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
+						<Ellipse Fill="#FF3D32AC" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
+						<TextBlock TextWrapping="Wrap" Text="COOL ONLY" Margin="10,0,0,0"/>
+					</StackPanel>
+				</toolkit:ListPickerItem>
+				<toolkit:ListPickerItem HorizontalAlignment="Left" Width="414">
+					<StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+						<Ellipse Fill="#FFB44040" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
+						<Ellipse Fill="#FF3D32AC" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
+						<TextBlock TextWrapping="Wrap" Text="HEAT + COOL" Margin="10,0,0,0"/>
+					</StackPanel>
+				</toolkit:ListPickerItem>
+			</toolkit:ListPicker>
 		</Grid>
 
 	</Grid>
