--- a/WPNest/WPNest/MainPage.xaml
+++ b/WPNest/WPNest/MainPage.xaml
@@ -1,7 +1,11 @@
 ﻿<phone:PhoneApplicationPage xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone" xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:WPNest="clr-namespace:WPNest" xmlns:Login="clr-namespace:WPNest.Login" xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" xmlns:ec="clr-namespace:Microsoft.Expression.Interactivity.Core;assembly=Microsoft.Expression.Interactions" xmlns:System="clr-namespace:System;assembly=mscorlib" xmlns:edc="clr-namespace:Microsoft.Expression.Controls;assembly=Microsoft.Expression.Drawing" xmlns:toolkitPrimitives="clr-namespace:Microsoft.Phone.Controls.Primitives;assembly=Microsoft.Phone.Controls.Toolkit" x:Class="WPNest.MainPage" mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768" SupportedOrientations="Portrait" Orientation="Portrait" shell:SystemTray.BackgroundColor="Transparent" shell:SystemTray.ForegroundColor="#444444" shell:SystemTray.Opacity="0" shell:SystemTray.IsVisible="False">
 
 	<phone:PhoneApplicationPage.Resources>
+		<WPNest:FanModeToBoolConverter x:Key="FanModeToBoolConverter"/>
+		<WPNest:FanModeToLabelConverter x:Key="FanModeToLabelConverter"/>
+		<WPNest:IsAwayToLabelConverter x:Key="IsAwayToLabelConverter"/>
 		<WPNest:TrueToVisibleConverter x:Key="TrueToVisibleConverter" />
+		<WPNest:TestValueConverter x:Key="TestConverter" />
 		<Storyboard x:Name="ResetZoom">
 			<DoubleAnimation Duration="0" To="0.3" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True" />
 			<DoubleAnimation Duration="0" To="0.3" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True" />
@@ -203,28 +207,15 @@
 												<TranslateTransform x:Name="BackgroundTranslation" />
 											</Rectangle.RenderTransform>
 										</Rectangle>
-										<Border BorderThickness="3">
-											<Border.BorderBrush>
-												<SolidColorBrush Color="#FFFFFFFF" />
-											</Border.BorderBrush>
+										<Border BorderThickness="3" BorderBrush="#FFFFFFFF">
 											<Border BorderThickness="4" BorderBrush="Black" />
 										</Border>
 									</Grid>
-									<Border x:Name="SwitchThumb" BorderThickness="4,0" HorizontalAlignment="Left" Height="38" Margin="-4,0" Width="28">
-										<Border.BorderBrush>
-											<SolidColorBrush Color="Black" />
-										</Border.BorderBrush>
+									<Border x:Name="SwitchThumb" BorderThickness="4,0" HorizontalAlignment="Left" Height="38" Margin="-4,0" Width="28" BorderBrush="Black">
 										<Border.RenderTransform>
 											<TranslateTransform x:Name="ThumbTranslation" />
 										</Border.RenderTransform>
-										<Border x:Name="ThumbCenter" BorderThickness="2">
-											<Border.Background>
-												<SolidColorBrush Color="#FFFFFFFF" />
-											</Border.Background>
-											<Border.BorderBrush>
-												<SolidColorBrush Color="White" />
-											</Border.BorderBrush>
-										</Border>
+										<Border x:Name="ThumbCenter" BorderThickness="2" Background="#FFFFFFFF" BorderBrush="White"/>
 									</Border>
 								</Grid>
 							</Grid>
@@ -303,7 +294,7 @@
 		<Storyboard x:Name="MoveThermostatToForeground">
 			<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="thermostatControl">
 				<SplineDoubleKeyFrame KeyTime="0" Value="-150" />
-				<EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="1.7881393432617188E-05">
+				<EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="1.7881393432617188E-05">
 					<EasingDoubleKeyFrame.EasingFunction>
 						<BackEase EasingMode="EaseIn" />
 					</EasingDoubleKeyFrame.EasingFunction>
@@ -311,7 +302,7 @@
 			</DoubleAnimationUsingKeyFrames>
 			<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" Storyboard.TargetName="thermostatControl">
 				<SplineDoubleKeyFrame KeyTime="0" Value="0.5" />
-				<EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="1">
+				<EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="1">
 					<EasingDoubleKeyFrame.EasingFunction>
 						<QuadraticEase EasingMode="EaseIn" />
 					</EasingDoubleKeyFrame.EasingFunction>
@@ -319,7 +310,7 @@
 			</DoubleAnimationUsingKeyFrames>
 			<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)" Storyboard.TargetName="thermostatControl">
 				<SplineDoubleKeyFrame KeyTime="0" Value="0.5" />
-				<EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="1">
+				<EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="1">
 					<EasingDoubleKeyFrame.EasingFunction>
 						<QuadraticEase EasingMode="EaseIn" />
 					</EasingDoubleKeyFrame.EasingFunction>
@@ -327,13 +318,17 @@
 			</DoubleAnimationUsingKeyFrames>
 			<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="thermostatControl">
 				<SplineDoubleKeyFrame KeyTime="0" Value="0.7" />
-				<EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="1">
+				<EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="1">
 					<EasingDoubleKeyFrame.EasingFunction>
 						<QuadraticEase EasingMode="EaseIn" />
 					</EasingDoubleKeyFrame.EasingFunction>
 				</EasingDoubleKeyFrame>
 			</DoubleAnimationUsingKeyFrames>
 		</Storyboard>
+		<DataTemplate x:Key="HvacModeControlTemplate">
+			<WPNest:HvacModeControl HorizontalAlignment="Left" 
+									HvacMode="{Binding HvacMode, Converter={StaticResource TestConverter}}"/>
+		</DataTemplate>
 	</phone:PhoneApplicationPage.Resources>
 
 	<phone:PhoneApplicationPage.FontFamily>
@@ -536,17 +531,17 @@
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="Auto" />
 			</Grid.RowDefinitions>
-			<TextBlock x:Name="awayLabel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Away Mode" VerticalAlignment="Top" Grid.Row="1" Margin="32,0,0,0" FontSize="21.333" FontFamily="Segoe WP Light" Foreground="#FDC1C1C1" />
-			<toolkit:ToggleSwitch x:Name="awaySwitch" VerticalAlignment="Top" Grid.Row="1" Margin="20,10,0,0" Content="Home" SwitchForeground="{StaticResource PhoneAccentBrush}" Foreground="White" Background="Black" Style="{StaticResource ToggleSwitchDarkStyle}" />
+<!--			<TextBlock x:Name="awayLabel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Away Mode" VerticalAlignment="Top" Grid.Row="1" Margin="32,0,0,0" FontSize="21.333" FontFamily="Segoe WP Light" Foreground="#FDC1C1C1" />-->
+<!--			<toolkit:ToggleSwitch x:Name="awaySwitch" VerticalAlignment="Top" Grid.Row="1" Margin="20,10,0,0" Content="{Binding IsAway, Converter={StaticResource IsAwayToLabelConverter}}" SwitchForeground="{StaticResource PhoneAccentBrush}" Foreground="White" Background="Black" Style="{StaticResource ToggleSwitchDarkStyle}" IsChecked="{Binding IsAway, Mode=TwoWay}" />-->
 			<TextBlock x:Name="fanLabel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Fan" VerticalAlignment="Top" Grid.Row="2" Margin="32,0,0,0" FontSize="21.333" FontFamily="Segoe WP Light" Foreground="#FDC1C1C1" />
-			<toolkit:ToggleSwitch x:Name="fanSwitch" VerticalAlignment="Top" Grid.Row="2" Margin="20,10,0,0" Content="Auto" IsChecked="True" SwitchForeground="{StaticResource PhoneAccentBrush}" Foreground="White" Background="Black" Style="{StaticResource ToggleSwitchDarkStyle}" />
-			<TextBlock x:Name="hvacLabel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Fan" VerticalAlignment="Top" Grid.Row="2" Margin="32,0,0,0" FontSize="21.333" FontFamily="Segoe WP Light" Foreground="#FDCBCBCB" />
-			<toolkit:ListPicker Margin="30,0,30,30" VerticalAlignment="Bottom" Grid.Row="3" Background="#BFFFFFFF" BorderBrush="#BFFFFFFF" Foreground="Black" Template="{StaticResource ListPickerControlDarkTemplate}">
-				<WPNest:HvacModeControl HvacMode="HeatOnly" />
-				<WPNest:HvacModeControl HvacMode="CoolOnly" />
-				<WPNest:HvacModeControl HvacMode="HeatAndCool" />
-				<WPNest:HvacModeControl HvacMode="Off" />
-			</toolkit:ListPicker>
+			<toolkit:ToggleSwitch x:Name="fanSwitch" VerticalAlignment="Top" Grid.Row="2" Margin="20,10,0,0" Content="{Binding FanMode, Converter={StaticResource FanModeToLabelConverter}}" IsChecked="{Binding FanMode, Converter={StaticResource FanModeToBoolConverter}, Mode=TwoWay}" SwitchForeground="{StaticResource PhoneAccentBrush}" Foreground="White" Background="Black" Style="{StaticResource ToggleSwitchDarkStyle}" />
+<!--			<TextBlock x:Name="hvacLabel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Fan" VerticalAlignment="Top" Grid.Row="2" Margin="32,0,0,0" FontSize="21.333" FontFamily="Segoe WP Light" Foreground="#FDCBCBCB" />-->
+<!--			<toolkit:ListPicker x:Name="hvacModePicker" Margin="30,0,30,30" VerticalAlignment="Bottom" Grid.Row="3" Background="#BFFFFFFF" BorderBrush="#BFFFFFFF" Foreground="Black" Template="{StaticResource ListPickerControlDarkTemplate}" ItemTemplate="{StaticResource HvacModeControlTemplate}" SelectionChanged="OnHvacModeSelectionChanged">-->
+<!--				<WPNest:HvacModeControl HorizontalAlignment="Left" Width="398" HvacMode="HeatOnly"/>-->
+<!--				<WPNest:HvacModeControl HorizontalAlignment="Left" Width="398" HvacMode="CoolOnly"/>-->
+<!--				<WPNest:HvacModeControl HorizontalAlignment="Left" Width="398" HvacMode="HeatAndCool"/>-->
+<!--				<WPNest:HvacModeControl HorizontalAlignment="Left" Width="398"/>-->
+<!--			</toolkit:ListPicker>-->
 		</Grid>
 
 	</Grid>
